<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="#379c75"
            android:padding="20dp">
            <!--        <ImageView-->
            <!--            android:id="@+id/profile_image"-->
            <!--            android:layout_width="200dp"-->
            <!--            android:layout_height="200dp"-->
            <!--            android:src="@drawable/cv"-->
            <!--            android:layout_centerVertical="true"-->
            <!--            android:scaleType="fitXY"-->
            <!--            />-->
            <TextView
                android:id="@+id/heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/create_your_short_cv"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/heading"
                android:layout_centerHorizontal="true"
                android:includeFontPadding="false"
                android:text="Fill in your personal information "
                android:textColor="@color/white"
                android:textSize="14sp" />
        </RelativeLayout>

        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#2042429A"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <EditText
                android:id="@+id/full_name"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/full_name"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"


                />

            <EditText
                android:id="@+id/objective"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/objective"
                android:inputType="text|textMultiLine"

                />

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:singleLine="true"

                />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="310dp"
                android:layout_height="wrap_content"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"

                >
                <RadioGroup
                    android:id="@+id/rg_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/gender_text"
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/gender"
                        android:includeFontPadding="false"
                        android:textSize="20sp"

                        />
                    <RadioButton
                        android:id="@+id/rb_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/rb_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/female" />
                </RadioGroup>

            </LinearLayout>

            <Button
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/next" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>