<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".CVActivity2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="#379c75"
            android:padding="20dp">
            <!--        <ImageView-->
            <!--            android:id="@+id/profile_image"-->
            <!--            android:layout_width="200dp"-->
            <!--            android:layout_height="200dp"-->
            <!--            android:src="@drawable/cv"-->
            <!--            android:layout_centerVertical="true"-->
            <!--            android:scaleType="fitXY"-->
            <!--            />-->
            <TextView
                android:id="@+id/heading2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Complete your CV"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/heading2"
                android:layout_centerHorizontal="true"
                android:includeFontPadding="false"
                android:text="Education and Work Experience"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </RelativeLayout>

        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#2042429A"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <EditText
                android:id="@+id/education"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:hint="Education"
                android:inputType="text|textMultiLine" />

            <EditText
                android:id="@+id/work"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_margin="20dp"
                android:hint="@string/work_experience"
                android:inputType="text|textMultiLine" />

            <EditText
                android:id="@+id/projects"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:hint="@string/projects"
                android:inputType="text|textMultiLine"
                />

            <EditText
                android:id="@+id/skills"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_margin="20dp"
                android:hint="Skills"
                android:inputType="text|textMultiLine"

                />


            <Button
                android:id="@+id/finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/finish" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>